objects/gvp__Settings_Find_Users__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>gvp__Display_Account_Team_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Account Team Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Survey_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Toggle option to display list of active survey plans in order to get a list of users for a selected plan</description>
        <label>Display Survey Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_1_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Manager 1 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_2_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Manager 2 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_3_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Manager 3 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <label>Find Users Settings</label>
</CustomObject>